# Xshell-AI

./: .gitignore  Cargo.toml
xshell-ai/xshell-agent-manager/: Cargo.toml
xshell-ai/xshell-agent-manager/src/: error.rs  events.rs  lib.rs  server.rs  socket_path.rs  state.rs
xshell-ai/xshell-agent-manager/tests/: hook_roundtrip.rs
xshell-ai/xshell-finder/: Cargo.toml
xshell-ai/xshell-finder/examples/: pick.rs
xshell-ai/xshell-finder/src/: dialog.rs  error.rs  lib.rs  path_utils.rs
xshell-ai/xshell-hook/: Cargo.toml
xshell-ai/xshell-hook/src/: forward.rs  main.rs
xshell-ai/xshell-sidebar/: Cargo.toml
xshell-ai/xshell-sidebar/src/: lib.rs
xshell-ai/xshell-themes/: Cargo.toml
xshell-ai/xshell-themes/src/: color.rs  error.rs  import.rs  lib.rs  parser.rs  storage.rs
xshell-ai/xshell-themes/tests/fixtures/: dracula.itermcolors
xshell-ai/xshell-workspaces/: Cargo.toml
xshell-ai/xshell-workspaces/src/: config.rs  error.rs  io.rs  lib.rs  paths.rs
xshell-ai/xshell-workspaces/tests/: roundtrip.rs
