[package]
name = "xshell-finder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSURL", "NSString", "NSArray"] }
objc2-app-kit = { version = "0.2", features = ["NSOpenPanel", "NSSavePanel", "NSPanel", "NSResponder", "NSWindow", "NSApplication"] }

[dev-dependencies]
tempfile = "3"
