[package]
name = "xshell-themes"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
plist = "1.7"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
thiserror = "1"
dirs = "5"

[dev-dependencies]
tempfile = "3"
mockito = "1"
